Updated Bukkit module to new language system