@@ -1,9 +1,9 @@
 package me.szumielxd.portfel.bukkit.commands;
 
-import static net.kyori.adventure.text.format.NamedTextColor.RED;
-
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collection;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -16,7 +16,6 @@ import org.bukkit.command.PluginCommand;
 import org.bukkit.command.TabExecutor;
 import org.jetbrains.annotations.NotNull;
 
-import me.szumielxd.portfel.api.Portfel;
 import me.szumielxd.portfel.api.objects.CommonSender;
 import me.szumielxd.portfel.bukkit.PortfelBukkitImpl;
 import me.szumielxd.portfel.bukkit.objects.BukkitSender;
@@ -24,73 +23,91 @@ import me.szumielxd.portfel.common.commands.AbstractCommand;
 import me.szumielxd.portfel.common.commands.CmdArg;
 import me.szumielxd.portfel.common.commands.SimpleCommand;
 import me.szumielxd.portfel.common.lang.Lang.LangKey;
+import me.szumielxd.portfel.common.lang.MainLangKey;
 import me.szumielxd.portfel.common.utils.MiscUtils;
+import net.kyori.adventure.text.Component;
 
-public class MainCommand implements AbstractCommand, TabExecutor {
+public class MainCommand implements AbstractCommand<Component>, TabExecutor {
 
 	private final PortfelBukkitImpl plugin;
 	private final PluginCommand command;
-	private Map<String, SimpleCommand> childrens = new HashMap<>();
+	private Map<String, SimpleCommand<Component>> childrens = new HashMap<>();
 	private static final String HELP = "help";
 	
 	
 	public MainCommand(@NotNull PortfelBukkitImpl plugin, @NotNull PluginCommand command) {
 		this.plugin = plugin;
 		this.command = command;
-		this.register(
+		this.register(List.of(
 				new HelpCommand(plugin, this, HELP),
 				new TestmodeCommand(plugin, this, "testmode"),
-				new SystemParentCommand(plugin, this)
-		);
+				new SystemParentCommand(plugin, this)));
 	}
 	
 	
-	private void register(SimpleCommand... command) {
-		Arrays.asList(command).forEach(cmd -> this.childrens.putIfAbsent(cmd.getName().toLowerCase(), cmd));
-		Arrays.asList(command).forEach(cmd -> Arrays.asList(cmd.getAliases()).forEach(str -> this.childrens.putIfAbsent(str, cmd)));
+	private void register(Collection<SimpleCommand<Component>> commands) {
+		commands.forEach(cmd -> this.childrens.putIfAbsent(cmd.getName().toLowerCase(), cmd));
+		commands.forEach(cmd -> Arrays.asList(cmd.getAliases())
+				.forEach(str -> this.childrens.putIfAbsent(str, cmd)));
 	}
 	
 
 	@Override
-	public void onCommand(@NotNull CommonSender sender, @NotNull Object[] parsedArgs, @NotNull String[] label, @NotNull String[] args) {
+	public void onCommand(@NotNull CommonSender<Component> sender, @NotNull Object[] parsedArgs, @NotNull String[] label, @NotNull String[] args) {
 		if (args.length == 0) args = new String[] { "" };
-		SimpleCommand cmd = this.childrens.get(args[0].toLowerCase());
+		SimpleCommand<Component> cmd = this.childrens.get(args[0].toLowerCase());
 		if (cmd == null) cmd = this.childrens.get(HELP);
 		if (!cmd.hasPermission(sender)) {
-			sender.sendMessage(Portfel.PREFIX.append(LangKey.ERROR_COMMAND_PERMISSION.component(RED)));
+			MainLangKey.ERROR_COMMAND_PERMISSION
+					.draft()
+					.send(sender, true);
 			return;
 		} else if (!cmd.getAccess().canAccess(sender)) {
-			sender.sendMessage(Portfel.PREFIX.append(cmd.getAccess().getAccessMessage().component(RED)));
+			cmd.getAccess().getAccessMessage()
+					.draft()
+					.send(sender, true);
 			return;
 		}
 		cmd.onCommand(sender, parsedArgs, MiscUtils.mergeArrays(label, args[0]), MiscUtils.popArray(args));
 	}
 
 	@Override
-	public @NotNull List<String> onTabComplete(@NotNull CommonSender sender, @NotNull String[] label, @NotNull String[] args) {
+	public @NotNull List<String> onTabComplete(@NotNull CommonSender<Component> sender, @NotNull String[] label, @NotNull String[] args) {
 		if (args.length == 1) {
 			String arg = args[0].toLowerCase();
-			return this.childrens.entrySet().stream().filter(e -> e.getValue().hasPermission(sender))
-					.map(Entry::getKey).filter(s -> s.toLowerCase().startsWith(arg)).collect(Collectors.toList());
+			return this.childrens.entrySet().stream()
+					.filter(e -> e.getValue().hasPermission(sender))
+					.map(Entry::getKey)
+					.filter(s -> s.toLowerCase().startsWith(arg))
+					.toList();
 		} else if (args.length > 1) {
-			SimpleCommand cmd = this.childrens.get(args[0].toLowerCase());
-			if (cmd != null) return cmd.onTabComplete(sender, MiscUtils.mergeArrays(label, args[0]), MiscUtils.popArray(args));
+			SimpleCommand<Component> cmd = this.childrens.get(args[0].toLowerCase());
+			if (cmd != null) {
+				return cmd.onTabComplete(sender, MiscUtils.mergeArrays(label, args[0]), MiscUtils.popArray(args));
+			}
 		}
 		return new ArrayList<>();
 	}
 
 	@Override
-	public @NotNull List<CmdArg> getArgs() {
-		return new ArrayList<>();
+	public @NotNull List<CmdArg> getStaticArgs() {
+		return Collections.emptyList();
+	}
+
+	@Override
+	public @NotNull List<CmdArg> getFlyingArgs() {
+		return Collections.emptyList();
 	}
 
 	@Override
 	public @NotNull LangKey getDescription() {
-		return LangKey.EMPTY;
+		return MainLangKey.EMPTY;
 	}
 	
-	public @NotNull List<SimpleCommand> getChildrens() {
-		return this.childrens.values().stream().distinct().collect(Collectors.toList());
+	public @NotNull List<SimpleCommand<Component>> getChildrens() {
+		return this.childrens.values().stream()
+				.distinct()
+				.collect(Collectors.toList());
 	}
 
 
